<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowSubCategory"
    android:layout_margin="20dp" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="290dp"
        android:layout_height="197dp"
        android:contentDescription="@string/img1_cont_desc"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/plastic_pipes" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="286dp"
        android:layout_height="144dp"
        android:contentDescription="@string/img2_cont_desc"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView1"
        app:srcCompat="@drawable/plastic_sprayer" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="281dp"
        android:layout_height="164dp"
        android:contentDescription="@string/img3_con_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/plastic_siphon" />
</androidx.constraintlayout.widget.ConstraintLayout>